# bad-socket

./: README.md  bad-socket.cabal  stack.yaml
app/: IOVec.hsc  Main.hs  TCP.hs
