name:                bad-socket
version:             0.1.0.0
author:              Eric Seidel
build-type:          Simple
cabal-version:       >=1.10

executable bad-socket
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       IOVec, TCP
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , async
                     , bytestring
                     , network-simple
                     , network
  default-language:    Haskell2010
